// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/Settings/OptIn.jsx Snapshot tests with react-test-renderer OptIn is rendered correctly with falsy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_support_ghostery
      </h3>
      <h5>
        settings_support_ghostery_by
        :
      </h5>
      <div
        className="s-option-group"
        id=""
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-share-usage"
            name="enable_metrics"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-share-usage"
          >
            <span>
              settings_share_usage
            </span>
          </label>
          <div
            className="s-tooltip-down"
            data-g-tooltip="settings_share_usage_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
        id="human-web-section"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-share-human-web"
            name="enable_human_web"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-share-human-web"
          >
            <span>
              settings_share_human_web
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_human_web_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
        id="abtests-section"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            id="settings-allow-abtests"
            name="enable_abtests"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-allow-abtests"
          >
            <span>
              settings_allow_abtests
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_abtests_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/panel/Settings/OptIn.jsx Snapshot tests with react-test-renderer OptIn is rendered correctly with truthy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_support_ghostery
      </h3>
      <h5>
        settings_support_ghostery_by
        :
      </h5>
      <div
        className="s-option-group"
        id=""
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-share-usage"
            name="enable_metrics"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-share-usage"
          >
            <span>
              settings_share_usage
            </span>
          </label>
          <div
            className="s-tooltip-down"
            data-g-tooltip="settings_share_usage_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
        id="human-web-section"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-share-human-web"
            name="enable_human_web"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-share-human-web"
          >
            <span>
              settings_share_human_web
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_human_web_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
        id="abtests-section"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            id="settings-allow-abtests"
            name="enable_abtests"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-allow-abtests"
          >
            <span>
              settings_allow_abtests
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_abtests_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
